Align copyright text and fix links.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,5 +18,9 @@ h2 {
   color: gray;
 }
 a {
+  text-decoration: none;
   color: aquamarine;
+}
+.copyright {
+  text-align: right;
 }
